infra/k3s/base/ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui
  namespace: boringstack
  labels:
    app: ui
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: ui
